# bachelor

./: CVreadme.txt  ComVis.py  README  README.md  pixTest.py
ROSnodes/: README.md  drawRoute.py  featureDetection_v1.py  my_pub_v1_1.py  my_sub.py  my_test.py  pathPlanner_v1_1.py
ROSnodes/MarkerLocator/launch/: drone_scouting.launch
ROSnodes/MarkerLocator/patterns/: patterns.tex
ROSnodes/feature_detection/: featureDetection_v1_3.py
ROSnodes/feature_detection/msg/: coord.msg
ROSnodes/scripts/: astar_spoof.py  display_image.py  display_rgb_grey.py  featureDetection_v1_1.py  featureDetection_v1_2.py  featureDetection_v1_3.py  my_pub.py  my_sub_v1.py  my_test.py  pathPlanner_v1.py  pathPlanner_v1_1.py
ROSnodes/txt_files/: matrix.txt  r_v1.txt  recieved.txt  testoutput1.txt
comvis/: ImgToMatrix.py  imgMatrix.py  imgMatrix_v1.py  imgtomatrix.nja
frobomind/fmExecutors/platform/frobit_waypoint_navigation/src/: waypoint_list.py  waypoint_navigation.py  waypoint_navigation_node.py
pathfinding/: .testoutput1.txt.swp  MapHandler.cpp  MapHandler.h  Source.cpp  astar.cpp  astar.h  my_test.py
pathfinding/pathplanning/: CMakeLists.txt
pathfinding/pathplanning/src/: astar.cpp  astar.h  astarPP.cpp  test.cpp
pathplanner_node/: CMakeLists.txt  astar.cpp  astar.h  astarPP.cpp
pathplanner_node/ver_2/: CMakeLists.txt
pathplanner_node/ver_2/include/pathplanning/: astar.h  coordTrans.h  pathplanningControl.h
pathplanner_node/ver_2/pathplanning/: outputdebug.txt  outputdebug2.txt
pathplanner_node/ver_2/src/: waypoints.txt
